--- a/Gameception/Assinante/Templates/Assinante/CadastroAssinatura.html
+++ b/Gameception/Assinante/Templates/Assinante/CadastroAssinatura.html
@@ -4,8 +4,8 @@
 
     {% if registrado %}
 
-        Obrigado por registrar sua assinatura!<br/>
-        <a href="{% url 'MinhaConta' %}">Voltar para a sua conta</a><br/>
+        Obrigado por registrar sua assinatura!<br>
+        <a href="{% url 'MinhaConta' %}"><button class="btn btn-md btn-primary" style="margin:10px">Voltar a sua conta</button></a><br>
 
     {% else %}
         <form role="form" action="/Assinante/Assinatura/" method="post">
