--- a/Gameception/Assinante/Templates/Assinante/ContatoAdmin.html
+++ b/Gameception/Assinante/Templates/Assinante/ContatoAdmin.html
@@ -5,6 +5,6 @@
 {% block content %}
 
     Sua menssagem foi enviada com sucesso.<br>
-    <a href="{% url 'MinhaConta' %}"><button class="btn btn-md btn-primary" style="margin:10px">Voltar para sua conta</button></a><br />
+    <a href="{% url 'MinhaConta' %}"><button class="btn btn-md btn-primary" style="margin:10px">Voltar a sua conta</button></a><br>
 
 {% endblock %}
