--- a/Gameception/Assinante/Templates/Assinante/CadastroEndereco.html
+++ b/Gameception/Assinante/Templates/Assinante/CadastroEndereco.html
@@ -33,7 +33,7 @@
             {{ form.CEPForm }}
             <br/>
 
-            <button type="submit" class="btn btn-default">Submit</button>
+            <button type="submit" class="btn btn-default">Enviar</button>
             </div>
         </form>
 
