--- a/Gameception/Assinante/Templates/Assinante/Assinatura.html
+++ b/Gameception/Assinante/Templates/Assinante/Assinatura.html
@@ -53,7 +53,7 @@
             {{form.memVideoForm}}
             <br/>
 
-            <button type="submit" class="btn btn-default">Submit</button>
+            <button type="submit" class="btn btn-default">Enviar</button>
             </div>
         </form>
 
