--- a/Gameception/Assinante/Templates/Assinante/Assinante.html
+++ b/Gameception/Assinante/Templates/Assinante/Assinante.html
@@ -24,7 +24,7 @@
               Digital, Número do pedido: {{pedido_recente.numero}}<br>
               {% for chave in chaves %}
               <div class="">
-                <img src="http://cdn.akamai.steamstatic.com/steam/apps/{{chave.jogo.img1}}/header.jpg?t={{chave.jogo.img2}}" style="width: 460px; height: 215px"><br>
+                <img src="http://cdn.akamai.steamstatic.com/steam/apps/{{chave.jogo.img1}}/header.jpg?t={{chave.jogo.img2}}" alt="{{chave.jogo.nome}}"><br>
                 <div class="">
                   {{chave.jogo.nome}}<br>
                   Chave Download: {{chave.chave}}<br>
