--- a/Gameception/Assinante/Templates/Assinante/Login.html
+++ b/Gameception/Assinante/Templates/Assinante/Login.html
@@ -1,19 +1,26 @@
 {% extends "MainPage.html" %}
 
+{% block title %}Login{% endblock %}
+
 {% block content %}
 
-<h1>Login</h1>
+        <h1>Login</h1>
 
-<link href="http://getbootstrap.com/examples/signin/signin.css" rel="stylesheet">
+        <link href="http://getbootstrap.com/examples/signin/signin.css" rel="stylesheet">
 
-<form class="form-signin" role="form" method="post" action=".">
-{% csrf_token %}
+        <form class="form-signin" role="form" method="post" action=".">
+            {% csrf_token %}
 
-<h2 class="form-signin-heading">Insira suas informações de Login</h2>
-<input class="form-control" placeholder="Nome de Usuário" id="id_username" maxlength="254" name="username" type="text" required autofocus=""/>
-<input type="password" class="form-control" placeholder="Senha" id="id_password" name="password"  required />
-
-<button class="btn btn-lg btn-primary btn-block" type="submit" value="Submit" >Sign in</button>
-</form>
+            <h2 class="form-signin-heading">Insira suas informações de Login</h2>
+            <input class="form-control" placeholder="Nome de Usuário" id="id_username" maxlength="254" name="username" type="text" required autofocus=""/>
+            <input type="password" class="form-control" placeholder="Senha" id="id_password" name="password"  required />
+            {% if errado %}
+                <strong>O nome de usuário ou senha está incorreto.</strong><br><br>
+            {% elif desativada %}
+                <strong>A conta acessada está desativada.</strong>
+            {% endif %}
+            Esqueceu sua senha? <a href="{% url 'RedefinirSenha' %}">Clique aqui.</a><br><br>
+            <button class="btn btn-lg btn-primary btn-block" type="submit" value="Submit" >Sign in</button>
+        </form>
 
 {% endblock %}
