--- a/Gameception/Assinante/Templates/Assinante/Historico.html
+++ b/Gameception/Assinante/Templates/Assinante/Historico.html
@@ -43,6 +43,12 @@
            <p>Descrição:</p>
            <p style="text-indent:30px">{{ j.descricao }}</p>
            <br>
+           <p>
+             Ram mínima : {{j.memRAM}} MB
+           </p>
+           <p>
+             Preço : {{j.preco}} MB
+           </p>
            Entregue em: <a href="/Assinante/Historico/{{p.numero}}/"><button class="btn-primary">{{p.data}}</button></a><br>
          </div>
        </div>
