--- a/Gameception/Assinante/Templates/Assinante/HistoricoPedido.html
+++ b/Gameception/Assinante/Templates/Assinante/HistoricoPedido.html
@@ -26,6 +26,12 @@
           <p>Descrição:</p>
           <p style="text-indent:30px">{{ chave.jogo.descricao }}</p>
           <br>
+          <p>
+            Ram mínima : {{chave.jogo.memRAM}} MB
+          </p>
+          <p>
+            Preço : {{chave.jogo.preco}} MB
+          </p>
           Chave de Download: {{chave.chave}}
         </div>
      </div>
@@ -51,6 +57,12 @@
          <br><br>
          <p>Descrição:</p>
          <p style="text-indent:30px">{{ jogo.descricao }}</p>
+         <p>
+           Ram mínima : {{jogo.memRAM}} MB
+         </p>
+         <p>
+           Preço : {{jogo.preco}} MB
+         </p>
        </div>
      </div>
    </div>
