--- a/Gameception/Assinante/Templates/Assinante/Historico.html
+++ b/Gameception/Assinante/Templates/Assinante/Historico.html
@@ -47,7 +47,7 @@
              Ram mínima : {{j.memRAM}} MB
            </p>
            <p>
-             Preço : {{j.preco}} MB
+             Preço : R$ {{j.preco}}
            </p>
            Entregue em: <a href="/Assinante/Historico/{{p.numero}}/"><button class="btn-primary">{{p.data}}</button></a><br>
          </div>
