--- a/Gameception/Assinante/Templates/Assinante/HistoricoPedido.html
+++ b/Gameception/Assinante/Templates/Assinante/HistoricoPedido.html
@@ -30,7 +30,7 @@
             Ram mínima : {{chave.jogo.memRAM}} MB
           </p>
           <p>
-            Preço : {{chave.jogo.preco}} MB
+            Preço : R$ {{chave.jogo.preco}}
           </p>
           Chave de Download: {{chave.chave}}
         </div>
@@ -61,7 +61,7 @@
            Ram mínima : {{jogo.memRAM}} MB
          </p>
          <p>
-           Preço : {{jogo.preco}} MB
+           Preço : R$ {{jogo.preco}}
          </p>
        </div>
      </div>
