--- a/Gameception/Assinante/Templates/Assinante/Historico.html
+++ b/Gameception/Assinante/Templates/Assinante/Historico.html
@@ -33,7 +33,7 @@
      <div>
        <div class="thumbnail">
          <img src="http://cdn.akamai.steamstatic.com/steam/apps/{{j.img1}}/header.jpg?t={{j.img2}}" style="width: 460px; height: 215px">
-         <div class="caption" style="max-width:460px; height: 400px">
+         <div class="caption" style="max-width:460px; height: 450px">
            <h3>{{ j.nome }}</h3>
            <p>Gêneros: </p>
            {% for genero in j.listaGeneros.all %}
@@ -44,7 +44,7 @@
            <p style="text-indent:30px">{{ j.descricao }}</p>
            <br>
            <p>
-             Ram mínima : {{j.memRAM}} MB
+             RAM mínima : {{j.memRAM}} MB
            </p>
            <p>
              Preço : R$ {{j.preco}}
