--- a/Gameception/Assinante/Templates/MainPage.html
+++ b/Gameception/Assinante/Templates/MainPage.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+{% load staticfiles %}
 
   <head>
     <meta charset="utf-8">
@@ -9,7 +10,7 @@
     <meta name="author" content="">
     <link rel="icon" href="http://getbootstrap.com/favicon.ico">
 
-    <title>Gameception - {% block title %}Home{% endblock %}</title>
+    <title>Gameception - {% block title %}{% endblock %}</title>
 
     <link href="http://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="http://getbootstrap.com/examples/dashboard/dashboard.css" rel="stylesheet">
@@ -20,9 +21,9 @@
     <![endif]-->
   </head>
 
-  <body>
+  <body >
 
-    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation" style="background-color:#11120C">
       <div class="container-fluid">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
@@ -31,7 +32,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="{% url 'Home' %}">GAMECEPTION</a>
+          <a class="navbar-left" href="{% url 'Home' %}"><img src="{% static "img/logo2.jpg" %}"  style="width:150px;height:50px; margin-left: -15px;"></a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
