--- a/Gameception/InfoGeral/Templates/Infos/Sobre.html
+++ b/Gameception/InfoGeral/Templates/Infos/Sobre.html
@@ -6,44 +6,110 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+
 </head>
 <body>
-<header style="font-size:180%">
+<header style="font-size:300%; text-align:center;">
     We have to go deeper
-</header><br>
-<p style="text-indent:45px;padding-right:850px;text-align: justify;float:left;">
-    O sistema Gameception proporciona uma experiencia gamer sem igual. Através dele o gamer pode extender de maneira
-    personalizada seu acervo de games com o que há de melhor no mercado nacional e internacional.
-</p><br>
-<p style="text-indent:45px;padding-right:850px;text-align: justify;float:right;">
-    Nosso sistema funciona da seguinte maneira:<br>
-    Primeiramente o gamer realiza um cadastro rapido com suas informações pessoais
-</p><br>
-<p style="text-indent:45px;padding-right:850px;text-align: justify;float:left;">
-    Nullam ultricies ipsum quis augue dignissim, vel ullamcorper libero placerat. In imperdiet non sem eu rutrum. Aliquam
-    mauris risus, fringilla vel turpis eget, suscipit fermentum nisl. Vivamus a egestas risus. Mauris efficitur venenatis
-    leo, sed consectetur tortor vulputate vel. Maecenas aliquet sem quis commodo rutrum. Aenean hendrerit urna ut quam
-    varius luctus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Duis
-    convallis cursus tempus. Quisque ac vehicula sem, ut ultricies sem. Lorem ipsum dolor sit amet, consectetur adipiscing
-    elit. Quisque augue tortor, blandit at odio vestibulum, viverra fringilla justo. Ut aliquet rhoncus tellus, eget
-    vehicula dui ornare quis. Vestibulum in eleifend orci, vel venenatis enim.
-</p><br>
-<p style="text-indent:45px;padding-right:850px;text-align: justify;float:right;">
-    Curabitur quis odio ut lorem rutrum condimentum nec nec purus. Cras sollicitudin lacus eu mi varius vehicula. Duis
-    sed efficitur leo. Donec aliquet efficitur ligula nec dapibus. Pellentesque pulvinar, augue ut pretium dapibus, metus
-    augue eleifend neque, quis tincidunt metus ante id magna. Sed vehicula eu dui in facilisis. Aenean venenatis urna
-    non condimentum pharetra. Aliquam erat volutpat. Quisque lobortis leo ut odio placerat consequat. Donec mattis lorem
-    vitae sem consectetur imperdiet. Nam tristique mi in dui venenatis, ut pulvinar enim varius. Etiam dui ligula, feugiat
-    eu pharetra ut, lobortis nec erat. Mauris scelerisque, risus sed aliquam tempor, urna purus interdum justo, et
-    placerat velit urna quis dolor. Aenean id odio porttitor, venenatis massa vel, vestibulum libero.
-</p><br>
-<p style="text-indent:45px;padding-right:850px;text-align: justify;float:left;">
-    In hac habitasse platea dictumst. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus
-    mus. Aliquam ornare nunc quis nibh porttitor hendrerit. Nam pellentesque turpis sit amet mi malesuada ornare. Nullam
-    risus urna, efficitur at tortor id, rutrum aliquet turpis. Suspendisse vel erat ante. Cras congue viverra est vel
-    elementum. Nullam pretium finibus lobortis. Fusce posuere fringilla nulla, vestibulum venenatis purus suscipit sed.
-    Phasellus quis posuere lectus. Donec consequat eleifend sodales.
-</p><br>
+</header>
+<br>
+
+    <div style="height:300px; ">
+        <p style="font-size:160%; text-indent:45px; text-align:justify; width:350px; position: absolute; left:15%; top:6%;">
+            Nós da Gameception temos como objetivo proporcionar uma experiência totalmente nova para você gamer,
+            levando à sua casa jogos escolhidos a dedo a partir de um acervo abrangente e de alta qualidade.
+
+        </p>
+
+        <img src="http://i.imgur.com/5eLlZ.jpg"
+             style="width:400px;height:400px; float:right; border:solid; border-radius: 30px; position: absolute; left:50%; top:4%;">
+    </div><br>
+
+    <div style="height:300px; ">
+        <img src="https://www.pixelmedia.com/images/_blogPostHeader/personalization-of-a-website.jpg"
+             style="width:450px;height:400px; float:right; border:solid; border-radius: 30px; position: absolute; left:12%; top:19%;">
+
+        <p style="font-size:160%;text-indent:45px; text-align: justify; width:350px; position: absolute; top:21%; left:50%;">
+            Para isso, nosso sistema se baseia nas preferências escolhidas por você para otimizar a montagem do conjunto de
+            jogos a serem enviados mensalmente para o mesmo.
+
+        </p>
+    </div><br>
+
+    <div style="height:300px; ">
+        <p style="font-size:160%; text-indent:45px; text-align:justify; width:350px; position: absolute; left:15%; top:36%;">
+            Você faz seu cadastro completando com seus dados para poder acessar a plataforma, mas não é obrigado a cadastrar
+            seu cartão ou assinar o serviço de imediato. Explore nosso acervo o tempo que preferir.
+        </p>
+        <img src="http://www.libricon.com/DataManagement/Uploads/25/detective_agency-invistigator-Chennai-Mumbai-Pune-Bangalore-Goa-Chandigarh-Dubai.jpg"
+             style="width:450px;height:400px; float:right; border:solid; border-radius: 30px; position: absolute; top:34%; left: 50%;">
+    </div>
+
+    <div style="height:300px; ">
+        <img src="http://igm.rit.edu/~gdd1/wp-content/uploads/2013/09/game-genre.png"
+             style="width:400px;height:400px; float:right; border:solid; border-radius: 30px; position: absolute; top:49%; left: 13%;">
+
+        <p style="font-size:160%;text-indent:45px; text-align: justify; width:350px; position: absolute; left:50%; top:51%;">
+            Viaje pelo site e, se decidir fazer a assinatura, pode escolher dentre as diversas categorias de jogos e faixa de
+            preço mensal de sua preferência.
+
+        </p>
+    </div><br>
+
+    <div style="height:300px; ">
+        <p style="font-size:160%; text-indent:45px; text-align:justify; width:350px; position: absolute; left:15%; top:66%;">
+            Nós também oferecemos a opção de receber o jogo em versão digital ou física, para os
+            <strike> acumuladores</strike>
+            colecionadores. A versão física pode ser adquirida por sem acrécimo na mensalidade, com excessão do frete.
+        </p>
+
+        <img src="http://www.geek.com/wp-content/uploads/2013/01/burrrnnnn.jpg"
+             style="width:400px;height:400px; float:right; border:solid; border-radius: 30px; position: absolute; top:64%; left: 50%;">
+
+    </div><br>
+
+    <div style="height:300px; ">
+        <img src="http://www.theskyfullofdust.co.uk/wp-content/uploads/2011/03/Ancient-Book.jpg"
+             style="width:450px;height:400px; float:right; border:solid; border-radius: 30px; position: absolute; top:79%; left: 12%;">
+
+        <p style="font-size:160%;text-indent:45px; text-align: justify; width:350px; position: absolute; left:50%; top:81%;">
+            Para um acompanhamento melhor, você ainda terá um perfil dentro da plataforma, onde poderá ver os jogos que
+            ja passaram pelo site, bem como suas descrições e generos, e ver todos os jogos já recebidos em seu histórico.
+
+        </p>
+    </div><br>
+
+    <div style="height:300px; ">
+        <p style="font-size:160%; text-indent:45px; text-align:justify; width:350px; position: absolute; left:15%; top:96%;">
+            Caso queira mudar as categorias de jogos ou o valor mensal da assinatura, é só ir até sua conta, clicar em “Editar
+            Assinatura” e mudar suas preferências, que no mês seguinte você já receberá os jogos refiltrados, fácil assim.
+
+        </p>
+        <img src="http://www.scienceinmusic.com/changeofmind/img/change-of-mind-cover-web.jpg"
+             style="width:400px;height:400px; float:right; border:solid; border-radius: 30px; position: absolute; top:94%; left: 50%;">
+    </div><br>
+
+    <div style="height:300px; ">
+        <img src="http://www.kristendarcy.com/wp-content/uploads/2015/12/pause-button-2.png"
+             style="width:400px;height:400px; float:right; border:solid; border-radius: 30px; position: absolute; top:109%; left: 13%;">
+
+        <p style="font-size:160%;text-indent:45px; text-align: justify; width:350px; position: absolute; left:50%; top:111%;">
+            Você sempre terá a opção de pausar a assinatura, sem ter que necessariamente excluir seu perfil. Quando quiser
+            retomar a assinatura, você pode simplesmente ir até o botão “Ativar Assinatura” que ela será reativada para o mês
+            seguinte.
+
+        </p>
+    </div><br>
+
+    <div style="height:300px; ">
+        <p style="font-size:160%; text-align: center; width:700px; position: absolute; left:20%; top:124%;">
+            Junte-se à comunidade GAMECEPTION para irmos mais fundo no mundo dos games e tenha entretenimento garantido todo mês.
+
+        </p>
+        <img src="http://cdn.shopify.com/s/files/1/0860/3518/products/sealofapproval_comp.jpg?v=1432862016"
+             style="width:450px;height:450px; float:right; border:solid; border-radius: 30px; position: absolute; top:127%; left: 30%; margin-bottom:50px">
+    </div><br>
+
 </body>
 </html>
 {% endblock %}}
