--- a/Gameception/Assinante/Templates/MainPage.html
+++ b/Gameception/Assinante/Templates/MainPage.html
@@ -68,7 +68,7 @@
              <br><a href="{% url 'GerenciarEntregas' %}">
                 <button class="btn btn-primary btn-md" style="margin:10px;width:180px;text-align: center">Gerenciar entregas</button></a>
              <br><a href="../../admin">
-                <button class="btn btn-primary btn-md" style="margin:10px;width:180px;text-align: center"><Gerenciar></Gerenciar> dados</button></a>
+                <button class="btn btn-primary btn-md" style="margin:10px;width:180px;text-align: center">Gerenciar dados</button></a>
              {%endif%}
            </div>
           {% endif %}
